[package]
name = "coinbase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
thiserror = "1.0.30"
sha2 = "0.10.2"
hmac = "0.12.1"
base64 = "0.13.0"